--- a/LGBTFinder/Views/Shared/_Layout.cshtml
+++ b/LGBTFinder/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+    <link rel="shortcut icon" type="image/ico" href="@Url.Content("~/Images/Flag.ico")"/>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
