dynamically populating business model props

--- a/LGBTFinder/Views/Home/Index.cshtml
+++ b/LGBTFinder/Views/Home/Index.cshtml
@@ -4,16 +4,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
+
+
+
+
 <h2 class="text-center">LGBT Friendly Business Finder</h2>
 
 <div class="row">
-    <div class="col-sm-5 well">
+    <div class="col-sm-5">
         <div class="lead text-center">
             <a href="#" id="FinderSection" onclick="LoadFinderSection();">Search For a LGBT Friendly Business</a>
         </div>
     </div>
     <div class="col-sm-2"></div>
-    <div class="col-sm-5 well">
+    <div class="col-sm-5">
         <div class="lead text-center">
             <a href="#" id="RegisterSection" onclick="LoadRegisterSection();">Register a LGBT Friendly Business</a>
 
@@ -21,9 +26,10 @@
     </div>
 </div>
 
-<div class="row">
-    <div id="PartialViewData"></div>
-</div>
+
+<div id="PartialViewData"></div>
+
+
 
 <script type="text/javascript">
     
