--- a/LGBTFinder/Views/Shared/_Layout.cshtml
+++ b/LGBTFinder/Views/Shared/_Layout.cshtml
@@ -32,12 +32,12 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+        <br/>
 
+    </div>
+    <footer class="text-center">
+        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+    </footer>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
