--- a/LGBTFinder/Views/Shared/_Layout.cshtml
+++ b/LGBTFinder/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="contain-fluid body-content">
         @RenderBody()
         <br/>
 
