--- a/LGBTFinder/Views/Register/Index.cshtml
+++ b/LGBTFinder/Views/Register/Index.cshtml
@@ -3,18 +3,20 @@
 @model LGBTFinder.Models.BusinessModel
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     <form>
 
         <div class="">
-
-            <div class="text-center">
-                <h3><strong>Register Your Business!</strong></h3>
+            <div class="row well well-sm">
+                <div class="text-center text-primary">
+                    <h3><strong>Register Your Business!</strong></h3>
+                </div>
             </div>
-            <br/>
-            <div id="Choice1Section" class="row well well-sm">
+
+            <br />
+            <div id="Choice1Section" class="row">
                 <div class="col-sm-2 col-xs-1"></div>
                 <div class="col-sm-8 col-xs-10">
                     <div class="form-group">
@@ -33,8 +35,8 @@
                 </div>
                 <div class="col-sm-2 col-xs-1"></div>
             </div>
-            <br/>
-            <section id="Choice2Section" class="row" style="display: none;">
+            <br />
+            <section id="Choice2Section" class="row  well well-sm" style="display: none;">
                 <div class="col-sm-2 col-xs-1"></div>
                 <div class="col-sm-8 col-xs-10">
                     <div class="form-group">
@@ -44,17 +46,17 @@
                     </div>
                     <div class="form-group">
                         <label class="radio-inline">
-                            <input type="radio" name="inlineRadioOptions" id="RadioManualEntry" value="ManualEntry" onclick="InformationEntryChoice('manual');"/>Manual Entry
+                            <input type="radio" name="inlineRadioOptions" id="RadioManualEntry" value="ManualEntry" onclick="InformationEntryChoice('manual');" />Manual Entry
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="inlineRadioOptions" id="RadioUpload" value="SpreadsheetUpload" onclick="InformationEntryChoice('upload');"/>Upload Excel Spreadsheet
+                            <input type="radio" name="inlineRadioOptions" id="RadioUpload" value="SpreadsheetUpload" onclick="InformationEntryChoice('upload');" />Upload Excel Spreadsheet
                         </label>
                     </div>
                 </div>
                 <div class="col-sm-2 col-xs-1"></div>
             </section>
-            <br/>
-            <section id="InformationFieldsSection" class="row well well-sm" style="display: none;">
+            <br />
+            <section id="InformationFieldsSection" class="row" style="display: none;">
                 <div class="col-sm-2 col-xs-1"></div>
                 <div class="col-sm-8 col-xs-10">
                     <div class="form-group">
@@ -64,8 +66,8 @@
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.BusinessName)
-                        @Html.EditorFor(model => model.BusinessName, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "Business Name"}})
-                        @Html.ValidationMessageFor(model => model.BusinessName, "", new {@class = "text-danger"})
+                        @Html.EditorFor(model => model.BusinessName, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Business Name" } })
+                        @Html.ValidationMessageFor(model => model.BusinessName, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
@@ -79,9 +81,14 @@
                         </select>
                     </div>
                     <div class="form-group">
+                        @Html.LabelFor(model => model.BusinessDescription)
+                        @Html.EditorFor(model => model.BusinessDescription, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Business Description" } })
+                        @Html.ValidationMessageFor(model => model.BusinessDescription, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group">
                         @Html.LabelFor(model => model.WebsiteAddress)
-                        @Html.EditorFor(model => model.WebsiteAddress, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "Website Address"}})
-                        @Html.ValidationMessageFor(model => model.WebsiteAddress, "", new {@class = "text-danger"})
+                        @Html.EditorFor(model => model.WebsiteAddress, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Website Address" } })
+                        @Html.ValidationMessageFor(model => model.WebsiteAddress, "", new { @class = "text-danger" })
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.ContactEmail)
@@ -90,31 +97,31 @@
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.PhoneNumber)
-                        @Html.EditorFor(model => model.PhoneNumber, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "Phone Number"}})
-                        @Html.ValidationMessageFor(model => model.PhoneNumber, "", new {@class = "text-danger"})
+                        @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Phone Number" } })
+                        @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Address.Line1)
-                        @Html.EditorFor(model => model.Address.Line1, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "Address Line1"}})
-                        @Html.ValidationMessageFor(model => model.Address.Line1, "", new {@class = "text-danger"})
+                        @Html.EditorFor(model => model.Address.Line1, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Address Line1" } })
+                        @Html.ValidationMessageFor(model => model.Address.Line1, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Address.Line2)
-                        @Html.EditorFor(model => model.Address.Line2, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "Address Line2"}})
-                        @Html.ValidationMessageFor(model => model.Address.Line2, "", new {@class = "text-danger"})
+                        @Html.EditorFor(model => model.Address.Line2, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Address Line2" } })
+                        @Html.ValidationMessageFor(model => model.Address.Line2, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Address.City)
-                        @Html.EditorFor(model => model.Address.City, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "City"}})
-                        @Html.ValidationMessageFor(model => model.Address.City, "", new {@class = "text-danger"})
+                        @Html.EditorFor(model => model.Address.City, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "City" } })
+                        @Html.ValidationMessageFor(model => model.Address.City, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Address.State)
-                        <br/>
+                        <br />
                         <select class="form-control">
                             @foreach (var option in Enum.GetValues(typeof(Address.States)))
                             {
@@ -125,18 +132,18 @@
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Address.Zipcode)
-                        @Html.EditorFor(model => model.Address.Zipcode, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "City"}})
-                        @Html.ValidationMessageFor(model => model.Address.Zipcode, "", new {@class = "text-danger"})
+                        @Html.EditorFor(model => model.Address.Zipcode, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "City" } })
+                        @Html.ValidationMessageFor(model => model.Address.Zipcode, "", new { @class = "text-danger" })
                     </div>
-                    <br/>
+                    <br />
                     <div class="form-group">
-                        @Html.ActionLink("Cancel", "Index", "Home", null, new {@class = "btn btn-danger"})
+                        @Html.ActionLink("Cancel", "Index", "Home", null, new { @class = "btn btn-danger" })
                         <button type="submit" value="Register" class="btn btn-primary" style="margin-left: 1em;">Register</button>
                     </div>
                 </div>
                 <div class="col-sm-2 col-xs-1"></div>
             </section>
-            <section id="UploadInformationSection" class="row well well-sm" style="display: none;">
+            <section id="UploadInformationSection" class="row" style="display: none;">
                 <div class="col-sm-2 col-xs-1"></div>
                 <div class="col-sm-8 col-xs-10">
                     <div class="form-group">
@@ -145,25 +152,24 @@
                         </div>
                     </div>
                 </div>
-                    <table>
-                        <tbody>
-                            <tr>
-                                <td style="width: 50%;" class="text-center">
-                                    <input type="file" id="InputBusinessData" style="margin: 0 auto;"/>
-                                    <p class="help-block">Please upload spreadsheet of business location data.</p>
-                                </td>
-                                <td style="width: 50%;" class="text-danger">
-                                    Please upload in CSV or XLSX Format. Data must use following column names:
-                                    @Html.Action("PrintAllBusinessModelProps")
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-</section>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td style="width: 50%;" class="text-center">
+                                <input type="file" id="InputBusinessData" style="margin: 0 auto;" />
+                                <p class="help-block">Please upload spreadsheet of business location data.</p>
+                            </td>
+                            <td style="width: 50%;" class="text-danger">
+                                Please upload in CSV or XLSX Format. Data must use following column names:
+                                @Html.Action("PrintAllBusinessModelProps")
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
         </div>
     </form>
 }
 
-    
 
-    
+
